--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -36,7 +36,7 @@ jobs:
         run: chmod +x gradle
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradle build
 
       - name: Run tests
-        run: ./gradlew test
+        run: ./gradle test
