--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -36,7 +36,7 @@ jobs:
         run: chmod +x gradle
 
       - name: Build with Gradle
-        run: .gradle build
+        run: gradle build
 
       - name: Run tests
-        run: .gradle test
+        run: gradle test
