--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,6 +39,8 @@ coreTesting = "2.1.0"
 hiltCompose = "1.2.0"
 googleGson = "2.12.1"
 dropshots = "0.5.0"
+robolectric = "4.14.1"
+roborazziVersion = "1.32.2"
 uiTestJunit4Android = "1.8.3"
 
 [libraries]
@@ -123,6 +125,11 @@ mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 dropshots = { module = "com.dropbox.dropshots:dropshots", version.ref = "dropshots" }
 androidx-ui-test-junit4-android = { group = "androidx.compose.ui", name = "ui-test-junit4-android", version.ref = "uiTestJunit4Android" }
 
+robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
+roborazzi = { module = "io.github.takahirom.roborazzi:roborazzi", version.ref = "roborazziVersion" }
+roborazzi-compose = { module = "io.github.takahirom.roborazzi:roborazzi-compose", version.ref = "roborazziVersion" }
+roborazzi-rule = { module = "io.github.takahirom.roborazzi:roborazzi-junit-rule", version.ref = "roborazziVersion" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
@@ -135,4 +142,5 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "dagger" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 dropshots = { id = "com.dropbox.dropshots", version.ref = "dropshots" }
+roborazzi = { id = "io.github.takahirom.roborazzi", version.ref = "roborazziVersion" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
